--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="app" class="container">
-        <div v-for="item in 10">{{email}}</div>
+        <div v-for="item in email">{{item}}</div>
 
     </div>
 
